--- a/evaluator/src/app/shared/components/footer-credits/footer-credits.component.html
+++ b/evaluator/src/app/shared/components/footer-credits/footer-credits.component.html
@@ -5,6 +5,6 @@
     <a href="https://www.linkedin.com/in/raphael-cerutti-teodoro">Raphael C. Teodoro</a> | 
     <a href="https://www.linkedin.com/in/rbcaputo">Rob Caputo</a> | 
     <a href="https://www.linkedin.com/in/rafael-demarch/">Rafael R. Demarch</a> | 
-    <a href="">Maria Claudia</a>
+    <a href="https://www.linkedin.com/in/itisclaudia/">Maria Claudia</a>
     </p>
 </div>
