--- a/evaluator/src/app/components/evaluators/evaluators.component.html
+++ b/evaluator/src/app/components/evaluators/evaluators.component.html
@@ -2,7 +2,7 @@
   <div class="main">
     <div class="header">
       <div class="img"><img src="assets/img/logo-devs2blu.png"></div>
-      <button class="btn-exit"> SAIR </button>
+      <button class="btn-exit" (click)="logout();"> SAIR </button>
     </div>
     <div class="content">
       <h1> AVALIADOR </h1>
